# GDTM_Tracking_Anonymized

./: convert.sh  data_test.py  debug.sh  get_feats.py  readme.md  setup.py
configs/crossval/: trucks1_lightsT_obstaclesF_zed_nodes1234_det_crossval0.py  trucks1_lightsT_obstaclesF_zed_nodes1234_det_crossval1.py  trucks1_lightsT_obstaclesF_zed_nodes1234_det_crossval2.py  trucks1_lightsT_obstaclesF_zed_nodes1234_det_crossval3.py  trucks1_lightsT_obstaclesF_zed_nodes1234_det_crossval4.py  trucks1_lightsT_obstaclesF_zed_nodes1234_detr_crossval0.py  trucks1_lightsT_obstaclesF_zed_nodes1234_detr_crossval1.py  trucks1_lightsT_obstaclesF_zed_nodes1234_detr_crossval2.py  trucks1_lightsT_obstaclesF_zed_nodes1234_detr_crossval3.py  trucks1_lightsT_obstaclesF_zed_nodes1234_detr_crossval4.py  trucks1_lightsT_obstaclesF_zed_nodes1234_r50_crossval0.py  trucks1_lightsT_obstaclesF_zed_nodes1234_r50_crossval1.py  trucks1_lightsT_obstaclesF_zed_nodes1234_r50_crossval2.py  (+2 more)
mmtrack/: __init__.py
mmtrack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
requirements/: build.txt
src/cad/: README.md  (+1 more)
src/resource_constrained_tracking/: Multi-Observation Kalman Filter.ipynb  README.md  environment.py  performance.py  pubsub.py  scheduler.py  sensors.py  setup.cfg  simulator.py  targets.py  tracker.py  tracking_demo.ipynb  tracking_demo_torch.ipynb  vis.py
tools/: cache_datasets.py  test.py  test_from_config_grid.sh  test_from_config_nll.sh  test_from_config_nll_local.sh  train_from_ckpt_local.sh  train_from_config.sh  train_from_config_local.sh  val_from_config.sh  val_from_config_local.sh
(+338 files in other folders)
